# Declare4Py

./: .gitignore  Libraries.txt  README.md  callingGraph.dot  classes.dot  generated_xes.xes  packages.dot  pixi.toml  pyproject.toml  readthedocs.yml  requirements  requirements.txt  result.stats  result.txt  setup.cfg  setup.py
.github/workflow/: publish_to_py_pi.yaml
.github/workflows/: publish_to_py_pi.yml
.github/workflows  /: publish_to_py_pi.yml
Declare4Py/: __init__.py  run_log_generator.py
Declare4Py/Encodings/: Declare.py
Declare4Py/ProcessMiningTasks/: AbstractLogGenerator.py  AbstractPMTask.py  log_generator.py
Declare4Py/ProcessModels/: AbstractModel.py  Declare4PyModel.py  DeclareModel.py  TextualModel.py
ICPM/: README.txt  exp_prefix_log.ipynb  exp_whole_trace.ipynb  experimental_model_pos.decl  paper.mplstyle
PosLan/: README.md  exp_whole_trace.ipynb  experimental_model_neg.decl  experimental_model_pos.decl  paper.mplstyle
docs/: index.html  readthedocs.yml  search.js
src/: generated.asp
tests/: declare_analyzer.py  log_gen_quality_test.py  performance_LTL_analyzer.py  performance_LTL_analyzer_MM.py  plot_performance.py  prova_numba.py
tutorials/: Declare_Conformance_Checking.ipynb  Declare_Model_Discovery.ipynb  Declare_Query_Checking.ipynb  LTLAnalyzer.ipynb  Log_Encodings.ipynb  Log_filtering.ipynb  Log_information.ipynb  Managing_Event_Logs.ipynb  The_Event_Log_Class.ipynb  conformance_checking.ipynb  encodings.ipynb  log_analysis.ipynb  model_discovery.ipynb  query_checking.ipynb  sepsis_discovered_model.decl  test_import.ipynb
(+490 files in other folders)
